2007-05-05  Thomas Schwinge  <tschwinge@gnu.org>

	* i386/i386at/model_dep.c (halt_cpu, halt_all_cpus): Call
	`machine_idle' to avoid busy-looping.

	* i386/intel/read_fault.c (intel_read_fault): Remove the last parameter
	from the calls of `vm_map_lookup'.

	We're not in the eighties anymore.  List arguments in function
	prototypes and definitions for a lot of symbols.  Also drop some unused
	prototypes.  I refrain from listing every changed symbol.
	* vm/memory_object.c: Do as described.
	* vm/memory_object.h: Likewise.
	* vm/pmap.h: Likewise.
	* vm/vm_external.c: Likewise.
	* vm/vm_external.h: Likewise.
	* vm/vm_fault.c: Likewise.
	* vm/vm_fault.h: Likewise.
	* vm/vm_kern.h: Likewise.
	* vm/vm_map.c: Likewise.
	* vm/vm_map.h: Likewise.
	* vm/vm_pageout.h: Likewise.
	* vm/vm_user.h: Likewise.
	* vm/memory_object.h: Include <ipc/ipc_types.h>.
	* vm/pmap.h: Include <kern/thread.h>.
	* vm/vm_fault.h: Include <mach/vm_prot.h>, <vm/vm_map.h> and
	<vm/vm_types.h>.
	* vm/vm_map.h: Include <mach/vm_attributes.h> and <vm/vm_types.h>.
	(vm_map_t, VM_MAP_NULL): Remove type and definition.
	* vm/vm_object.h (vm_object_t, VM_OBJECT_NULL): Remove type and
	definition.
	* vm/vm_page.h: Include <vm/vm_types.h>.
	(vm_page_t, VM_PAGE_NULL): Remove type and definition.
	* vm/vm_user.h: Include <mach/std_types.h>.
	* kern/task.h: Include <vm/vm_types.h> instead of <vm/vm_map.h>.
	* vm/vm_types.h: New file: the above-removed types and definitions.

2007-05-02  Thomas Schwinge  <tschwinge@gnu.org>

	* configure.ac (--disable-default-device-drivers): Transform into...
	(--enable-device-drivers): ... this new option and extend it.
	* i386/configfrag.ac (--enable-lpr): Adapt to that.
	* linux/configfrag.ac (AC_OPTION_Linux_ix86_at, AC_Linux_DRIVER):
	Likewise.
	(AC_Linux_DRIVER_qemu): New definition.  Use it for the `floppy', `ide'
	and `ne' device drivers.
	* doc/mach.texi: Document all that.

2007-05-01  Thomas Schwinge  <tschwinge@gnu.org>
